[gd_scene load_steps=7 format=3 uid="uid://ptto4146phwg"]

[ext_resource type="PackedScene" uid="uid://bg0meusunoosr" path="res://SCENES/bow.tscn" id="1_17osx"]
[ext_resource type="Script" path="res://SCRIPTS/boat.gd" id="1_c5j0p"]
[ext_resource type="PackedScene" uid="uid://ccika7v5l27ew" path="res://SCENES/deck.tscn" id="2_kxpgr"]
[ext_resource type="PackedScene" uid="uid://dmy5awjreptlw" path="res://SCENES/stern.tscn" id="3_701t0"]
[ext_resource type="PackedScene" uid="uid://bevd7w3pl7sal" path="res://SCENES/play_grid.tscn" id="5_6ih3t"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_fso07"]
vertices = PackedVector2Array(112, -80, 112.5, -80, 112.5, 80, 112, 80, -112, 80, -112.5, 80, -112.5, -80, -112, -80, -80, -172, -34, -194, 34, -194, 80, -172, 112, -144, -112, -144, -80, 172, 112, 144, 80, 172, 34, 194, -34, 194, -112, 144, 127.5, 80, 190, -2191, 215, 3155, 127, 142, 127.5, -80, 127, -80, 127, -142, 83, -181, 35, -204, -127, -142, -127, -80, -127.5, -80, -127.5, 80, -127, 80, -127, 142, -254, 3181, 127, 80, 85, 180, 35, 204, -35, 204, -35, -204, -254, -2420, -84, -180, -85, 180)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(8, 9, 10, 11, 12, 0, 7, 13), PackedInt32Array(14, 4, 7, 3, 15, 16, 17, 18), PackedInt32Array(14, 19, 4), PackedInt32Array(7, 0, 3), PackedInt32Array(20, 21, 22, 23), PackedInt32Array(21, 20, 24), PackedInt32Array(24, 25, 26, 21), PackedInt32Array(21, 26, 27), PackedInt32Array(21, 27, 28), PackedInt32Array(29, 30, 31), PackedInt32Array(32, 33, 34, 35), PackedInt32Array(23, 36, 20), PackedInt32Array(37, 23, 22), PackedInt32Array(38, 37, 22, 35), PackedInt32Array(39, 38, 35), PackedInt32Array(21, 28, 40, 41), PackedInt32Array(41, 40, 42), PackedInt32Array(43, 39, 35), PackedInt32Array(41, 42, 29), PackedInt32Array(35, 41, 29, 31), PackedInt32Array(35, 31, 32), PackedInt32Array(35, 34, 43)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-254, -2420, 190, -2191, 215, 3155, -254, 3181)])
parsed_collision_mask = 4294967263
agent_radius = 5.0

[node name="Boat" type="Node2D" groups=["boat"]]
z_index = -2
script = ExtResource("1_c5j0p")
deck_scene = ExtResource("2_kxpgr")
deck_tasks = Array[int]([1, 1, 2, 2])

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_fso07")

[node name="BowSlot" type="Node2D" parent="NavigationRegion2D"]
position = Vector2(0, -142)

[node name="Bow" parent="NavigationRegion2D/BowSlot" instance=ExtResource("1_17osx")]

[node name="DeckSlot" type="Node2D" parent="NavigationRegion2D"]

[node name="Deck" parent="NavigationRegion2D/DeckSlot" instance=ExtResource("2_kxpgr")]

[node name="SternSlot" type="Node2D" parent="NavigationRegion2D"]
position = Vector2(0, 142)

[node name="Stern" parent="NavigationRegion2D/SternSlot" instance=ExtResource("3_701t0")]

[node name="Obstacles" type="Node2D" parent="NavigationRegion2D"]

[node name="Puddles" type="Node2D" parent="NavigationRegion2D/Obstacles"]

[node name="Leaks" type="Node2D" parent="NavigationRegion2D/Obstacles"]

[node name="Crew" type="Node" parent="."]

[node name="PlayGrid" parent="." node_paths=PackedStringArray("boat") instance=ExtResource("5_6ih3t")]
position = Vector2(-112, -176)
boat = NodePath("..")

[connection signal="cargo_set_up" from="NavigationRegion2D/BowSlot/Bow" to="." method="_on_bow_cargo_set_up"]
[connection signal="tasks_set_up" from="NavigationRegion2D/DeckSlot/Deck" to="." method="_on_deck_segment_tasks_set_up"]
[connection signal="cargo_set_up" from="NavigationRegion2D/SternSlot/Stern" to="." method="_on_stern_cargo_set_up"]
